--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Website: TNG, 2022
+Kono<!-- Website: TNG, 2022
 Start Date: Nov 17, 2022 -->
 
 
@@ -142,7 +142,7 @@ Start Date: Nov 17, 2022 -->
 
                     <div class="desc">
                         <p>We are an travel agency based on Howrah, India. </p>
-                        <p>We have over 12 years of experience serving in tourism & hotel industry. We offer excusion
+                        <p>We have over 30+ years of experience serving in tourism & hotel industry. We offer excusion
                             tour, coporate tour, family tour, weekend tour, hotel booking etc. all over India & Abroad.
                         </p>
                         <br />
