insert logo link

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Start Date: Nov 17, 2022 -->
     <header class="tng__header">
         <div class="main-container">
             <div class="inner-container">
-                <a class="tng--logo-link" href="javascript:">
+                <a class="tng--logo-link" href="#00">
                     <svg class="tng--logo" viewBox="0 0 95 76" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <use href="#svg--tnglogo"></use>
                     </svg>
