hotel samtenling link changed

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ Start Date: Nov 17, 2022 -->
                         <p>Rimbi Road, West Sikkim</p>
                         <p>Room starting from INR 1500/- per night</p>
                         <p>
-                            <a class="c2a--link" target="_blank" href="https://hotelsamtenlingpelling.in/">
+                            <a class="c2a--link" target="_blank" href="https://codesign-git.github.io/hotelsamtenling">
                                 Go to site
                                 <svg width="30" height="30" viewBox="0 0 30 30" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
