--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@ Start Date: Nov 17, 2022 -->
                             <img src="assets/img/icons/ico-fb.svg" />
                             <div>
                                 <span>Follow us</span>
-                                <p><a target="_blank" href="fb.com/tnghowrah">fb.com/tnghowrah</a> </p>
+                                <p><a target="_blank" href="https://www.facebook.com/tournguide/">fb.com/tnghowrah</a> </p>
                             </div>
                         </address>
                     </div>
